--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "type-coverage": "type-coverage -p ./tsconfig.app.json --at-least 100",
+    "check": "run-s lint type-coverage",
     "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
-    "solid-devtools": "^0.34.3",
     "sass": "^1.81.0",
-    "typescript": "^5.7.2",
+    "solid-devtools": "^0.34.3",
+    "typescript": "^5.9.3",
     "vite": "^7.1.4",
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "eslint": "^9.39.1",
+    "eslint-plugin-solid": "^0.14.5",
+    "npm-run-all": "^4.1.5",
+    "run-s": "^0.0.0",
+    "solid-js": "^1.9.5",
+    "tsc": "^2.0.4",
+    "type-coverage": "^2.29.7",
+    "typescript-eslint": "^8.48.0"
   }
 }
