--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.4",
     "eslint": "^9.39.1",
     "eslint-plugin-solid": "^0.14.5",
     "npm-run-all": "^4.1.5",
