--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "sass": "^1.81.0",
     "solid-devtools": "^0.34.3",
     "typescript": "^5.9.3",
@@ -21,6 +22,7 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@solidjs/router": "^0.15.4",
     "eslint": "^9.39.1",
     "eslint-plugin-solid": "^0.14.5",
