--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@solidjs/router": "^0.15.4",
     "eslint": "^9.39.1",
     "eslint-plugin-solid": "^0.14.5",
+    "heic2any": "^0.0.4",
     "firebase": "^12.6.0",
     "npm-run-all": "^4.1.5",
     "run-s": "^0.0.0",
