bugfix, and made so that logged in shows logg out and ur email

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "noEmit": true,
+    "skipLibCheck": true,
 
     // Type Checking & Safety
     "strict": true,
