other env error fixs for netlify build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,7 @@
       "vite/client",
       "google.maps"
     ]
-  }
+  },
+  "include": ["src", "vite-env.d.ts"],
+  "exclude": ["node_modules", "dist", "functions"]
 }
